--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,7 +4,46 @@
   <div class="row">
     <div class="col-12">
       <h1 class="text-center mt-4">To Do List</h1>
-      <div class="row" id="tasks"></div>
     </div>
   </div>
+  <div id="taskView" class="row mb-3">
+    <div class="col-12">
+      <div class="d-inline-block fw-bold me-1">View:</div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="viewOptions" id="viewOption1" value="Active">
+        <label class="form-check-label" for="viewOption1">Active</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="viewOptions" id="viewOption2" value="Complete">
+        <label class="form-check-label" for="viewOption2">Complete</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="viewOptions" id="viewOption3" value="All" checked>
+        <label class="form-check-label" for="viewOption3">All</label>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div id="tasks"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+        <h2>Add Task</h2>
+    </div>
+  </div>
+
+  <%= form_with model: @task do |form| %>
+    <div class="row">
+      <div class="col-12 col-lg-6">
+        <%= form.text_area :content, class: 'form-control mb-2', placeholder: 'Task Description' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 mb-2">
+      <%= form.submit "Save", class: "btn btn-success" %>
+    </div>
+  </div>
+  <% end %>
 </div>
